fix navbar alignment

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -31,15 +31,11 @@
 }
 
 .navbar a {
-  color: black;
+  // color: black;
   font-weight: bold;
   font-size: 1.2em;
-
 }
 
-#login-btn:hover {
-  color: #3c64a1
-}
 
 footer {
   text-align: center;
